@@ -516,7 +516,9 @@ semantic values of the terminal or nonterminal symbols that appear in the
 production via the semantic value identifiers bound by the production. For
 compatibility with \ocamlyacc, semantic actions can also refer to these
 semantic values via positional keywords of the form
-\kw{\$1}, \kw{\$2}, etc.\ This style is discouraged.
+\kw{\$1}, \kw{\$2}, etc.\ This style is discouraged. Furthermore, as
+a positional keyword of the form \kw{\$i} is internally rewritten as
+\nt{\_i}, such identifiers are forbidden.
 
 \paragraph{\dprec annotations}
 \label{sec:prec}
