@@ -1,3 +1,8 @@
+2015/06/29:
+Changed the treatment of positional parameters which are now
+rewritten into named parameters of the form '_i' where 'i'
+is an integer.
+
 2015/02/11:
 Added support for anonymous rules. This allows writing, e.g.,
 list(e = expression SEMI { e })
